--- a/style.scss
+++ b/style.scss
@@ -206,7 +206,7 @@ audio {
             background-image: url("./0_OnboardingPage/SUCCESS\ SOLID.png");
         }
     }
-
+.logoWatermark
     // EXPLORE BUTTON START
     .explore_button {
         align-items: flex-start;
@@ -576,7 +576,7 @@ audio {
     width: 100%;
     position: absolute;
     object-fit: contain;
-    opacity: .3;
+    opacity: 1;
 }
 
 
