--- a/style.css
+++ b/style.css
@@ -385,10 +385,10 @@ audio {
 
 .home .bg_video,
 .home .bg_video video {
-  height: 100vh;
-  width: 100%;
+  height: 120vh;
+  width: 120%;
   background-color: black;
-  background-size: contain;
+  background-size: cover;
   position: absolute;
   -o-object-fit: cover;
      object-fit: cover;
