--- a/style.scss
+++ b/style.scss
@@ -372,11 +372,11 @@ audio {
     /* Background video */
     .bg_video,
     .bg_video video {
-        height: 100vh;
-        width: 100%;
+        height: 120vh;
+        width: 120%;
         // background-image: url('./1_HomePage/NEW\ YORK\ SKYLINE.gif');
         background-color: black;
-        background-size: contain;
+        background-size: cover;
         position: absolute;
         object-fit: cover;
         object-position: center
