--- a/style.css
+++ b/style.css
@@ -383,11 +383,22 @@ audio {
   line-height: 8vh;
 }
 
-.home .bg_video,
+.home .bg_video {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  background-size: cover;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  overflow: hidden;
+}
+
 .home .bg_video video {
   height: 110vh;
   width: 110%;
-  background-color: black;
   background-size: cover;
   position: absolute;
   -o-object-fit: cover;
