dawn video size edit

--- a/style.scss
+++ b/style.scss
@@ -381,12 +381,13 @@ audio {
         overflow: hidden;        
     }
     .bg_video video {
-        height: 110vh;
-        width: 110%;
+        height: 125vh;
+        top: 0;
+        width: 100%;
         background-size: cover;
         position: absolute;
         object-fit: cover;
-        object-position: center;     
+        // object-position: center;     
     }
 }
 
