--- a/style.css
+++ b/style.css
@@ -397,14 +397,13 @@ audio {
 }
 
 .home .bg_video video {
-  height: 110vh;
-  width: 110%;
+  height: 125vh;
+  top: 0;
+  width: 100%;
   background-size: cover;
   position: absolute;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
 }
 
 /* Menu Bar */
