--- a/style.css
+++ b/style.css
@@ -45,6 +45,63 @@ audio {
   position: absolute;
 }
 
+.fullscreen {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  z-index: 990;
+}
+
+.fullscreen .popupbox {
+  width: 60%;
+  height: 60vh;
+  position: absolute;
+  background-color: white;
+  border-radius: 10px;
+  left: 20%;
+  top: 20vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.fullscreen .popupbox .lowerbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.fullscreen .popupbox .lowerbox button {
+  position: relative;
+  top: 50%;
+  height: 1.5rem;
+  width: 150%;
+  cursor: pointer;
+  border: gray;
+}
+
 .warning {
   width: 100%;
   height: 100vh;
